--- a/soccer.html
+++ b/soccer.html
@@ -98,124 +98,34 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Portsmouth vs Southampton</a></td>
-<td>January 25, 2026 4:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 04:00:00 AM" data-start="January 25, 2026 04:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Al Nassr vs Al Taawoun</a></td>
+<td>January 26, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 27, 2026 09:30:00 AM" data-start="January 26, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Madrid vs Mallorca</a></td>
-<td>January 25, 2026 5:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 05:00:00 AM" data-start="January 25, 2026 05:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Verona vs Udinese</a></td>
+<td>January 26, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 27, 2026 11:45:00 AM" data-start="January 26, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Brentford vs Nottingham Forest</a></td>
-<td>January 25, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Norwich City vs Coventry City</a></td>
+<td>January 26, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Crystal Palace vs Chelsea</a></td>
-<td>January 25, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Girona vs Getafe</a></td>
+<td>January 26, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Newcastle United vs Aston Villa</a></td>
-<td>January 25, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Everton vs Leeds United</a></td>
+<td>January 26, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Atalanta vs Parma</a></td>
-<td>January 25, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Nantes vs Nice</a></td>
-<td>January 25, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Borussia M'gladbach vs Stuttgart</a></td>
-<td>January 25, 2026 6:30 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 06:30:00 AM" data-start="January 25, 2026 06:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Hearts vs Celtic</a></td>
-<td>January 25, 2026 7:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 07:00:00 AM" data-start="January 25, 2026 07:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Barcelona vs Real Oviedo</a></td>
-<td>January 25, 2026 7:15 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 07:15:00 AM" data-start="January 25, 2026 07:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Brest vs Toulouse</a></td>
-<td>January 25, 2026 8:15 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 08:15:00 AM" data-start="January 25, 2026 08:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Metz vs Lyon</a></td>
-<td>January 25, 2026 8:15 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 08:15:00 AM" data-start="January 25, 2026 08:15:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Arsenal vs Manchester United</a></td>
-<td>January 25, 2026 8:30 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 08:30:00 AM" data-start="January 25, 2026 08:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Freiburg vs Köln</a></td>
-<td>January 25, 2026 9:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 09:00:00 AM" data-start="January 25, 2026 09:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Juventus vs Napoli</a></td>
-<td>January 25, 2026 9:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 09:00:00 AM" data-start="January 25, 2026 09:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Real Sociedad vs Celta Vigo</a></td>
-<td>January 25, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 09:30:00 AM" data-start="January 25, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Benfica vs Estrela</a></td>
-<td>January 25, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 10:00:00 AM" data-start="January 25, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Bolivia vs Mexico</a></td>
-<td>January 25, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 11:30:00 AM" data-start="January 25, 2026 11:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Lille vs Strasbourg</a></td>
-<td>January 25, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 11:45:00 AM" data-start="January 25, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Roma vs Milan</a></td>
-<td>January 25, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 11:45:00 AM" data-start="January 25, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Deportivo Alavés vs Real Betis</a></td>
-<td>January 25, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 12:00:00 PM" data-start="January 25, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Atlético Mineiro vs Cruzeiro</a></td>
-<td>January 25, 2026 13:00 PM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 01:00:00 PM" data-start="January 25, 2026 01:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Fluminense vs Flamengo</a></td>
-<td>January 25, 2026 13:00 PM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 01:00:00 PM" data-start="January 25, 2026 01:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Boca Juniors vs Deportivo Riestra</a></td>
-<td>January 25, 2026 13:30 PM</td>
-<td><span class="countdown-timer" data-end="January 26, 2026 01:30:00 PM" data-start="January 25, 2026 01:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Porto vs Gil Vicente</a></td>
+<td>January 26, 2026 12:15 PM</td>
+<td><span class="countdown-timer" data-end="January 27, 2026 12:15:00 PM" data-start="January 26, 2026 12:15:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
