--- a/nba.html
+++ b/nba.html
@@ -143,112 +143,98 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Sacramento Kings vs Detroit Pistons
+         Philadelphia 76ers vs Charlotte Hornets
         </a>
        </td>
        <td>
-        January 25, 2026 12:00 PM
+        January 26, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 12:00 PM:00" data-start="January 25, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Denver Nuggets vs Memphis Grizzlies
+         Orlando Magic vs Cleveland Cavaliers
         </a>
        </td>
        <td>
-        January 25, 2026 12:30 PM
+        January 26, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 12:30 PM:00" data-start="January 25, 2026 12:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         Golden State Warriors vs Minnesota Timberwolves
-        </a>
-       </td>
-       <td>
-        January 25, 2026 2:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 2:30 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Dallas Mavericks vs Milwaukee Bucks
+         Indiana Pacers vs Atlanta Hawks
         </a>
        </td>
        <td>
-        January 25, 2026 4:00 PM
+        January 26, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 4:30 PM:00" data-start="January 26, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Toronto Raptors vs Oklahoma City Thunder
+         Portland Trail Blazers vs Boston Celtics
         </a>
        </td>
        <td>
-        January 25, 2026 4:00 PM
+        January 26, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 5:00 PM:00" data-start="January 26, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         New Orleans Pelicans vs San Antonio Spurs
+         Los Angeles Lakers vs Chicago Bulls
         </a>
        </td>
        <td>
-        January 25, 2026 4:00 PM
+        January 26, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 5:00 PM:00" data-start="January 26, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Miami Heat vs Phoenix Suns
+         Memphis Grizzlies vs Houston Rockets
         </a>
        </td>
        <td>
-        January 25, 2026 5:00 PM
+        January 26, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 5:00 PM:00" data-start="January 25, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 5:00 PM:00" data-start="January 26, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Brooklyn Nets vs Los Angeles Clippers
+         Golden State Warriors vs Minnesota Timberwolves
         </a>
        </td>
        <td>
-        January 25, 2026 6:00 PM
+        January 26, 2026 6:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 26, 2026 6:00 PM:00" data-start="January 25, 2026 6:00 PM:00">
+        <span class="countdown-timer" data-end="January 27, 2026 6:30 PM:00" data-start="January 26, 2026 6:30 PM:00">
         </span>
        </td>
       </tr>
