--- a/nba.html
+++ b/nba.html
@@ -143,7 +143,7 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Philadelphia 76ers vs Charlotte Hornets
+         Indiana Pacers vs Atlanta Hawks
         </a>
        </td>
        <td>
@@ -151,6 +151,20 @@
        </td>
        <td>
         <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Philadelphia 76ers vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        January 26, 2026 10:30 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 10:30 AM:00">
         </span>
        </td>
       </tr>
