--- a/fighting.html
+++ b/fighting.html
@@ -98,14 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ufc">UFC 324: Gaethje vs Pimblett</a></td>
-<td>January 24, 2026 14:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 24, 2026 14:00:00"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Saturday Night's Main Event</a></td>
-<td>January 24, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 24, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>January 26, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 26, 2026 17:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
