--- a/nfl.html
+++ b/nfl.html
@@ -144,14 +144,14 @@
 <tr>
 <td>
 <a href="https://roxiestreams.live/nfl-streams-1">
-         New England Patriots vs Denver Broncos
+         Seattle Seahawks vs New England Patriots (Super Bowl LX)
         </a>
 </td>
 <td>
-        January 25, 2026 12:00 PM
+        February 8, 2026 15:00 PM
        </td>
 <td>
-<span class="countdown-timer" data-end="January 26, 2026 12:00:00 PM" data-start="January 25, 2026 12:00:00 PM">
+<span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 8, 2026 15:00:00 PM">
 </span>
 </td>
 </tr>
