--- a/nhl.html
+++ b/nhl.html
@@ -96,29 +96,54 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">Utah Mammoth vs Tampa Bay Lightning</a></td>
-            <td>January 26, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-27 16:00:00" data-start="2026-01-26 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Nashville Predators vs Boston Bruins</a></td>
+            <td>January 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 16:00:00" data-start="2026-01-27 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">Boston Bruins vs New York Rangers</a></td>
-            <td>January 26, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-27 16:00:00" data-start="2026-01-26 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Buffalo Sabres vs Toronto Maple Leafs</a></td>
+            <td>January 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 16:00:00" data-start="2026-01-27 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">New York Islanders vs Philadelphia Flyers</a></td>
-            <td>January 26, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-27 16:00:00" data-start="2026-01-26 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Vegas Golden Knights vs Montreal Canadiens</a></td>
+            <td>January 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 16:00:00" data-start="2026-01-27 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-4">Los Angeles Kings vs Columbus Blue Jackets</a></td>
-            <td>January 26, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-27 16:00:00" data-start="2026-01-26 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Los Angeles Kings vs Detroit Red Wings</a></td>
+            <td>January 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 16:00:00" data-start="2026-01-27 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-5">Anaheim Ducks vs Edmonton Oilers</a></td>
-            <td>January 26, 2026 05:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-27 17:30:00" data-start="2026-01-26 17:30:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Utah Mammoth vs Florida Panthers</a></td>
+            <td>January 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 16:00:00" data-start="2026-01-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Winnipeg Jets vs New Jersey Devils</a></td>
+            <td>January 27, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 16:00:00" data-start="2026-01-27 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Dallas Stars vs St. Louis Blues</a></td>
+            <td>January 27, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 17:00:00" data-start="2026-01-27 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Chicago Blackhawks vs Minnesota Wild</a></td>
+            <td>January 27, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 17:00:00" data-start="2026-01-27 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">San Jose Sharks vs Vancouver Canucks</a></td>
+            <td>January 27, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 19:00:00" data-start="2026-01-27 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Washington Capitals vs Seattle Kraken</a></td>
+            <td>January 27, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-28 19:00:00" data-start="2026-01-27 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
