--- a/nba.html
+++ b/nba.html
@@ -143,103 +143,101 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Indiana Pacers vs Atlanta Hawks
+         Portland Trail Blazers vs Washington Wizards
         </a>
        </td>
        <td>
-        January 26, 2026 10:30 AM
+        January 27, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 10:30 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         Philadelphia 76ers vs Charlotte Hornets
-        </a>
-       </td>
-       <td>
-        January 26, 2026 12:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="January 28, 2026 4:00 PM:00" data-start="January 27, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Orlando Magic vs Cleveland Cavaliers
+         Sacramento Kings vs New York Knicks
         </a>
        </td>
        <td>
-        January 26, 2026 4:00 PM
+        January 27, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 27, 2026 4:00 PM:00" data-start="January 26, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 28, 2026 4:30 PM:00" data-start="January 27, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Milwaukee Bucks vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        January 27, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 28, 2026 5:00 PM:00" data-start="January 27, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Portland Trail Blazers vs Boston Celtics
+         New Orleans Pelicans vs Oklahoma City Thunder
         </a>
        </td>
        <td>
-        January 26, 2026 5:00 PM
+        January 27, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 27, 2026 5:00 PM:00" data-start="January 26, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 28, 2026 5:00 PM:00" data-start="January 27, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Los Angeles Lakers vs Chicago Bulls
+         Detroit Pistons vs Denver Nuggets
         </a>
        </td>
        <td>
-        January 26, 2026 5:00 PM
+        January 27, 2026 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 27, 2026 5:00 PM:00" data-start="January 26, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 28, 2026 6:00 PM:00" data-start="January 27, 2026 6:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Memphis Grizzlies vs Houston Rockets
+         Brooklyn Nets vs Phoenix Suns
         </a>
        </td>
        <td>
-        January 26, 2026 5:00 PM
+        January 27, 2026 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 27, 2026 5:00 PM:00" data-start="January 26, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 28, 2026 6:00 PM:00" data-start="January 27, 2026 6:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Golden State Warriors vs Minnesota Timberwolves
+         Los Angeles Clippers vs Utah Jazz
         </a>
        </td>
        <td>
-        January 26, 2026 6:30 PM
+        January 27, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 27, 2026 6:30 PM:00" data-start="January 26, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="January 28, 2026 7:00 PM:00" data-start="January 27, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
-     </tbody>
-    </table>
      </tbody>
     </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
