--- a/soccer.html
+++ b/soccer.html
@@ -98,37 +98,16 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Al Nassr vs Al Taawoun</a></td>
-<td>January 26, 2026 9:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">St. Pauli vs Leipzig</a></td>
+<td>January 27, 2026 11:30 AM</td>
 <td><span class="countdown-timer" data-end="January 27, 2026 09:30:00 AM" data-start="January 26, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Verona vs Udinese</a></td>
-<td>January 26, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Fiorentina vs Como</a></td>
+<td>January 27, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 27, 2026 11:45:00 AM" data-start="January 26, 2026 11:45:00 AM"></span></td>
 </tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Norwich City vs Coventry City</a></td>
-<td>January 26, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Girona vs Getafe</a></td>
-<td>January 26, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Everton vs Leeds United</a></td>
-<td>January 26, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Porto vs Gil Vicente</a></td>
-<td>January 26, 2026 12:15 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:15:00 PM" data-start="January 26, 2026 12:15:00 PM"></span></td>
-</tr>
-<tr>
-</tr></tbody></tr></tbody></table></div>
+<tr></tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
