--- a/soccer.html
+++ b/soccer.html
@@ -100,12 +100,12 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">St. Pauli vs Leipzig</a></td>
 <td>January 27, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 09:30:00 AM" data-start="January 26, 2026 09:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 28, 2026 11:30:00 AM" data-start="January 27, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Fiorentina vs Como</a></td>
 <td>January 27, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 11:45:00 AM" data-start="January 26, 2026 11:45:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 27, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr></tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
