--- a/index.html
+++ b/index.html
@@ -182,29 +182,19 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
-<td>January 26, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Premier League</a></td>
-<td>January 26, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 26, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 12:00:00 PM" data-start="January 26, 2026 12:00:00 PM"></span></td>
+<td>January 27, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 27, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 26, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 04:30:00 PM" data-start="January 26, 2026 04:30:00 PM"></span></td>
+<td>January 27, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 04:30:00 PM" data-start="January 27, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 26, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 27, 2026 05:00:00 PM" data-start="January 26, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>January 27, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 05:00:00 PM" data-start="January 27, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
