--- a/soccer.html
+++ b/soccer.html
@@ -98,14 +98,95 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">St. Pauli vs Leipzig</a></td>
-<td>January 27, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 28, 2026 11:30:00 AM" data-start="January 27, 2026 11:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-18">UEFA Golazo Show</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 11:30:00 AM" data-start="January 28, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Fiorentina vs Como</a></td>
-<td>January 27, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 27, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Athletic Club vs Sporting CP</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 11:30:00 AM" data-start="January 28, 2026 11:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Arsenal vs Kairat</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Ajax vs Olympiakos Piraeus</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs København</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Bayer Leverkusen vs Villarreal</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Benfica vs Real Madrid</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Dortmund vs Inter Milan</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Club Brugge vs Marseille</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Frankfurt vs Tottenham</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Liverpool vs Qarabağ</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Manchester City vs Galatasaray</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Monaco vs Juventus</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Napoli vs Chelsea</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">PSG vs Newcastle</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">PSV vs Bayern München</a></td>
+<td>January 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Atlético Mineiro vs Palmeiras</a></td>
+<td>January 28, 2026 14:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Fluminense vs Gremio</a></td>
+<td>January 28, 2026 14:30 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-19">Corinthians vs Bahia</a></td>
+<td>January 28, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-20">River Plate vs Gimnasia La Plata</a></td>
+<td>January 28, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-21">São Paulo vs Flamengo</a></td>
+<td>January 28, 2026 16:30 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
+</tr>
+<td><a href="https://roxiestreams.live/soccer-streams-20">Boca Juniors vs Estudantes</a></td>
+<td>January 28, 2026 17:15 PM</td>
+<td><span class="countdown-timer" data-end="January 28, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr></tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
