--- a/nba.html
+++ b/nba.html
@@ -240,6 +240,152 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 28, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Lakers vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        January 28, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 4:00 PM:00" data-start="January 28, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Chicago Bulls vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        January 28, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 4:00 PM:00" data-start="January 28, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Atlanta Hawks vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        January 28, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 4:30 PM:00" data-start="January 28, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Orlando Magic vs Miami Heat
+        </a>
+       </td>
+       <td>
+        January 28, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 4:30 PM:00" data-start="January 28, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         New York Knicks vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        January 28, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 4:30 PM:00" data-start="January 28, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Charlotte Hornets vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 28, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 5:00 PM:00" data-start="January 28, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Minnesota Timberwolves vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        January 28, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 5:30 PM:00" data-start="January 28, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Golden State Warriors vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        January 28, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 6:00 PM:00" data-start="January 28, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         San Antonio Spurs vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        January 28, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 29, 2026 6:30 PM:00" data-start="January 28, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
