--- a/nhl.html
+++ b/nhl.html
@@ -144,6 +144,24 @@
             <td><a href="https://roxiestreams.live/nhl-streams-10">Washington Capitals vs Seattle Kraken</a></td>
             <td>January 27, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-28 19:00:00" data-start="2026-01-27 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Wednesday, January 28, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">New York Rangers vs New York Islanders</a></td>
+            <td>January 28, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-29 16:00:00" data-start="2026-01-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Philadelphia Flyers vs Columbus Blue Jackets</a></td>
+            <td>January 28, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-29 16:30:00" data-start="2026-01-28 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Colorado Avalanche vs Ottawa Senators</a></td>
+            <td>January 28, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-29 16:30:00" data-start="2026-01-28 16:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
