--- a/soccer-streams-6.html
+++ b/soccer-streams-6.html
@@ -101,7 +101,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sport2.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('rma.m3u8', '601'))">Stream 1 (EN)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tudn.m3u8', '601'))">Stream 2 (ES)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -127,7 +128,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('sport2.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('rma.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
