--- a/soccer-streams-6.html
+++ b/soccer-streams-6.html
@@ -101,8 +101,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('rma.m3u8', '601'))">Stream 1 (EN)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tudn.m3u8', '601'))">Stream 2 (ES)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tudn.m3u8', '601'))">Stream 1 (ES)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('rma.m3u8', '601'))">Stream 2 (ES)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
