--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/nba">UEFA Champions League</a></td>
+<td><a href="https://roxiestreams.live/soccer">UEFA Champions League</a></td>
 <td>January 28, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 29, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
 </tr>
