--- a/index.html
+++ b/index.html
@@ -192,14 +192,19 @@
 <td><span class="countdown-timer" data-end="January 29, 2026 04:00:00 PM" data-start="January 28, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>January 28, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 29, 2026 05:00:00 PM" data-start="January 28, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
 <td>January 28, 2026 4:30 PM</td>
 <td><span class="countdown-timer" data-end="January 29, 2026 04:30:00 PM" data-start="January 28, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/aew">AEW</a></td>
-<td>January 28, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 29, 2026 05:00:00 PM" data-start="January 28, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
+<td>January 29, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 04:30:00 PM" data-start="January 29, 2026 12:00:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
