--- a/nba.html
+++ b/nba.html
@@ -268,6 +268,138 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 29, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Sacramento Kings vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        January 29, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 4:00 PM:00" data-start="January 29, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Milwaukee Bucks vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 29, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 4:00 PM:00" data-start="January 29, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Houston Rockets vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        January 29, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 5:00 PM:00" data-start="January 29, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Miami Heat vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        January 29, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 5:00 PM:00" data-start="January 29, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Charlotte Hornets vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        January 29, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 5:30 PM:00" data-start="January 29, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Brooklyn Nets vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        January 29, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 6:00 PM:00" data-start="January 29, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Detroit Pistons vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        January 29, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 6:00 PM:00" data-start="January 29, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Oklahoma City Thunder vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 29, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 30, 2026 6:30 PM:00" data-start="January 29, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
