--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">UEFA Champions League</a></td>
+<td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
+<td>January 29, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 04:30:00 PM" data-start="January 29, 2026 12:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer">UEFA Europa League</a></td>
 <td>January 28, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 29, 2026 12:00:00 PM" data-start="January 28, 2026 12:00:00 PM"></span></td>
 </tr>
@@ -190,21 +195,6 @@
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
 <td>January 28, 2026 4:00 PM</td>
 <td><span class="countdown-timer" data-end="January 29, 2026 04:00:00 PM" data-start="January 28, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/aew">AEW</a></td>
-<td>January 28, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 29, 2026 05:00:00 PM" data-start="January 28, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 28, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 29, 2026 04:30:00 PM" data-start="January 28, 2026 04:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 29, 2026 12:00 AM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 04:30:00 PM" data-start="January 29, 2026 12:00:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
