--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
 <td><span class="countdown-timer" data-end="January 30, 2026 12:00:00 AM" data-start="January 29, 2026 12:00:00 AM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/darts">World Masters</a></td>
+<td>January 29, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 12:00:00 AM" data-start="January 29, 2026 11:30:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/soccer">UEFA Europa League</a></td>
 <td>January 29, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 30, 2026 12:00:00 PM" data-start="January 29, 2026 12:00:00 PM"></span></td>
