--- a/nba-streams-8.html
+++ b/nba-streams-8.html
@@ -101,8 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba8.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://602.xn--1000-ugoa0hsb9a0hb.com/nba8.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -137,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba8.m3u8');
+            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8');
         };
     </script>
     <script>
@@ -153,11 +152,10 @@
         });
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
-
-
 <script type="text/javascript">
-aclib.runPop({
-zoneId: '10754426',
-});
-</script></body>
+    aclib.runPop({
+        zoneId: '10754426',
+    });
+</script>
+</body>
 </html>
