--- a/index.html
+++ b/index.html
@@ -183,28 +183,33 @@
 <tr>
 <tr>
 <td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 29, 2026 12:00 AM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 12:00:00 AM" data-start="January 29, 2026 12:00:00 AM"></span></td>
+<td>January 30, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="January 31, 2026 12:00:00 AM" data-start="January 30, 2026 12:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>January 30, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="January 31, 2026 09:00:00 AM" data-start="January 30, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/darts">World Masters</a></td>
-<td>January 29, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 12:00:00 AM" data-start="January 29, 2026 11:30:00 AM"></span></td>
+<td>January 30, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 31, 2026 11:00:00 AM" data-start="January 30, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">UEFA Europa League</a></td>
-<td>January 29, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 12:00:00 PM" data-start="January 29, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Laliga</a></td>
+<td>January 30, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 31, 2026 12:00:00 PM" data-start="January 30, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 29, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 04:00:00 PM" data-start="January 29, 2026 04:00:00 PM"></span></td>
+<td>January 30, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 31, 2026 04:00:00 PM" data-start="January 30, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/tennis-1">Australian Open</a></td>
-<td>January 29, 2026 7:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 07:00:00 PM" data-start="January 29, 2026 07:00:00 PM"></span></td>
+<td>January 30, 2026 7:00 PM</td>
+<td><span class="countdown-timer" data-end="January 31, 2026 07:00:00 PM" data-start="January 30, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
