--- a/nba.html
+++ b/nba.html
@@ -254,6 +254,152 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 30, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Lakers vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 30, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 4:00 PM:00" data-start="January 30, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Toronto Raptors vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 30, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 4:30 PM:00" data-start="January 30, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Sacramento Kings vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        January 30, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 4:30 PM:00" data-start="January 30, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Portland Trail Blazers vs New York Knicks
+        </a>
+       </td>
+       <td>
+        January 30, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 4:30 PM:00" data-start="January 30, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Memphis Grizzlies vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        January 30, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 4:30 PM:00" data-start="January 30, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Cleveland Cavaliers vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        January 30, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 6:00 PM:00" data-start="January 30, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Los Angeles Clippers vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        January 30, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 6:00 PM:00" data-start="January 30, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Brooklyn Nets vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        January 30, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 6:30 PM:00" data-start="January 30, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Detroit Pistons vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 30, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 31, 2026 7:00 PM:00" data-start="January 30, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
