--- a/nhl.html
+++ b/nhl.html
@@ -169,6 +169,14 @@
             <td><a href="https://roxiestreams.live/nhl-streams-15">Toronto Maple Leafs vs Seattle Kraken</a></td>
             <td>January 29, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-30 19:00:00" data-start="2026-01-29 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, January 30, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Columbus Blue Jackets vs Chicago Blackhawks</a></td>
+            <td>January 30, 2026 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-31 17:30:00" data-start="2026-01-30 17:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
