--- a/fighting.html
+++ b/fighting.html
@@ -104,7 +104,7 @@
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 30, 2026 17:00 PM</td>
+<td>January 30, 2026 09:00/17:00 PM</td>
 <td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 30, 2026 17:00:00"></span></td>
 </tr>
 <tr>
